@@ -20,6 +20,7 @@ File::Spec              = 0
 JSON::XS                = 1
 LWP                     = 5
 HTTP::Request::Common   = 0
+Scalar::Util            = 1.01 ; reftype
 Try::Tiny               = 0.04
 URI                     = 1
 
